Disable  Collection Title field is series type is not a Trade Paperback

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -40,7 +40,15 @@
               </div>
             </div>
           {% else %}
-            <div class="control">{{ field }}</div>
+            {% if field.label == "Collection Title" %}
+              {% if issue.series.series_type.id == 10 %}
+                <div class="control">{{ field }}</div>
+              {% else %}
+                <fieldset disabled><div class="control">{{ field }}</div></fieldset>
+              {% endif %}
+            {% else %}
+              <div class="control">{{ field }}</div>
+            {% endif %}
           {% endif %}
           {% if field.help_text %}
             <ul>
