Remove field so Series Create form isn't broken
I'll look at improving this at a later date

--- a/comicsdb/templates/comicsdb/model_with_attribution_form.html
+++ b/comicsdb/templates/comicsdb/model_with_attribution_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load bulma_tags %}
 
-{% block title %}{{ form.instance }} Form{% endblock title %}
+{% block title %}Form{% endblock title %}
 
 {% block headscripts %}
 <script src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
