Add Series Type filter to Issue List search box.

--- a/comicsdb/templates/comicsdb/issue_list.html
+++ b/comicsdb/templates/comicsdb/issue_list.html
@@ -96,7 +96,7 @@
 
       <!-- Search Column -->
       <div class="column is-one-fifth">
-        {% include "comicsdb/issue_search_box.html" %}
+        {% include "comicsdb/issue_search_box.html" with objects=series_type %}
       </div>
       <!-- End of Search Column -->
     </div>
