Update issue pagination template for new filter

--- a/comicsdb/templates/comicsdb/pagination_issue.html
+++ b/comicsdb/templates/comicsdb/pagination_issue.html
@@ -1,32 +1,32 @@
   {% if is_paginated %}
   <nav class="pagination is-centered" role="navigation" aria-label="pagination">
     {% if page_obj.has_previous %}
-      <a class="pagination-previous" href="?page={{ page_obj.previous_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}">Previous</a>
+      <a class="pagination-previous" href="?page={{ page_obj.previous_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}{% if request.GET.series_type %}&series_type={{ request.GET.series_type }}{% endif %}">Previous</a>
     {% else %}
       <a class="pagination-previous" title="This is the first page" disabled>Previous</a>
     {% endif %}
     {% if page_obj.has_next %}
-      <a class="pagination-next" href="?page={{ page_obj.next_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}">Next page</a>
+      <a class="pagination-next" href="?page={{ page_obj.next_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}{% if request.GET.series_type %}&series_type={{ request.GET.series_type }}{% endif %}">Next page</a>
     {% else %}
       <a class="pagination-next" title="This is the last page" disabled>Next page</a>
     {% endif %}
 
     <ul class="pagination-list">
       {% if page_obj.number > 1 %}
-        <li><a class="pagination-link" href="?page=1{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}" aria-label="Goto page 1">1</a></li>
+        <li><a class="pagination-link" href="?page=1{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}{% if request.GET.series_type %}&series_type={{ request.GET.series_type }}{% endif %}" aria-label="Goto page 1">1</a></li>
       {% endif %}
 
       {% if page_obj.number  > 2 %}
         {% if page_obj.number > 3 %}
           <li><span class="pagination-ellipsis">&hellip;</span></li>
           <li>
-            <a class="pagination-link" href="?page={{ page_obj.previous_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}" aria-label="Goto page {{page_obj.previous_page_number}}">
+            <a class="pagination-link" href="?page={{ page_obj.previous_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}{% if request.GET.series_type %}&series_type={{ request.GET.series_type }}{% endif %}" aria-label="Goto page {{page_obj.previous_page_number}}">
               {{page_obj.previous_page_number}}
             </a>
           </li>
         {% else %}
           <li>
-            <a class="pagination-link" href="?page={{ page_obj.previous_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}" aria-label="Goto page {{page_obj.previous_page_number}}">
+            <a class="pagination-link" href="?page={{ page_obj.previous_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}{% if request.GET.series_type %}&series_type={{ request.GET.series_type }}{% endif %}" aria-label="Goto page {{page_obj.previous_page_number}}">
               {{page_obj.previous_page_number}}
             </a>
           </li>
@@ -42,14 +42,14 @@
       {% if page_obj.next_page_number < paginator.num_pages %}
         {% if page_obj.next_page_number < paginator.num_pages|add:'-1' %}
           <li>
-            <a class="pagination-link" href="?page={{ page_obj.next_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}" aria-label="Goto page {{ page_obj.next_page_number }}">
+            <a class="pagination-link" href="?page={{ page_obj.next_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}{% if request.GET.series_type %}&series_type={{ request.GET.series_type }}{% endif %}" aria-label="Goto page {{ page_obj.next_page_number }}">
               {{ page_obj.next_page_number}}
             </a>
           </li>
           <li><span class="pagination-ellipsis">&hellip;</span></li>
         {% else %}
           <li>
-            <a class="pagination-link" href="?page={{ page_obj.next_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}" aria-label="Goto page {{ page_obj.next_page_number }}">
+            <a class="pagination-link" href="?page={{ page_obj.next_page_number }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}{% if request.GET.series_type %}&series_type={{ request.GET.series_type }}{% endif %}" aria-label="Goto page {{ page_obj.next_page_number }}">
               {{ page_obj.next_page_number}}
             </a>
           </li>
@@ -58,7 +58,7 @@
 
       {% if page_obj.number < paginator.num_pages %}
         <li>
-          <a class="pagination-link" href="?page={{ paginator.num_pages }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}" aria-label="Goto page {{ paginator.num_pages }}">
+          <a class="pagination-link" href="?page={{ paginator.num_pages }}{% if request.GET.series_name %}&series_name={{ request.GET.series_name }}{% endif %}{% if request.GET.series_volume %}&series_volume={{ request.GET.series_volume }}{% endif %}{% if request.GET.cover_year %}&cover_year={{ request.GET.cover_year }}{% endif %}{% if request.GET.number %}&number={{ request.GET.number }}{% endif %}{% if request.GET.cover_month %}&cover_month={{ request.GET.cover_month }}{% endif %}{% if request.GET.series_type %}&series_type={{ request.GET.series_type }}{% endif %}" aria-label="Goto page {{ paginator.num_pages }}">
             {{ paginator.num_pages }}
           </a>
         </li>
