Updater Github link

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -124,7 +124,7 @@
       </div>
     </div>
     <div class="navbar-end">
-      <a class="navbar-item" href="https://github.com/bpepple/metron" target="_blank">
+      <a class="navbar-item" href="https://metron-project.github.io" target="_blank">
         <span class="icon"">
           <i class="fab fa-lg fa-github"></i>
         </span>
