Add link to blog

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -113,6 +113,12 @@
             </span>
             <span>Statistics</span>
           </a>
+          <a class="navbar-item" href="https://metron-project.github.io/blog" target="_blank">
+            <span class="icon">
+              <i class="fas fa-blog"></i>
+            </span>
+            <span>Blog</span>
+          </a>
           <hr class="navbar-divider">
           <a class="navbar-item" href="https://github.com/bpepple/metron/issues/new/choose">
             <span class="icon">
