--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -41,12 +41,12 @@
           <h1 class="title is-5">Want to use Metron's API?</h1>
           <div class="content">
             <p>If you want to use the data from Metron, there is a <a href="https://www.python.org/">Python</a> wrapper called 
-              <a href="https://github.com/bpepple/mokkari">Mokkari</a> to make it easy to use the API.</p>
+              <a href="https://github.com/Metron-Project/mokkari">Mokkari</a> to make it easy to use the API.</p>
           </div>
           <h1 class="title is-5">Need to tag your comic archives?</h1>
           <div class="content">
             <p>If you wish to tag your comic archives with metadata from Metron, head over Github
-            and install <a href="https://github.com/bpepple/metron-tagger">Metron-Tagger</a>.</p>
+            and install <a href="https://github.com/Metron-Project/metron-tagger">Metron-Tagger</a>.</p>
           </div>
           <h1 class="title is-5">Questions?</h1>
           <div class="content">
