--- a/comicsdb/templates/comicsdb/home.html
+++ b/comicsdb/templates/comicsdb/home.html
@@ -1,130 +1,109 @@
 {% extends parent_template|default:"base.html" %}
 {% load thumbnail %}
-{% load humanize %}
 {% load is_new %}
 {% load static %}
 
-{% block sitedesc %}<meta name="description" content="Metron is a comic book database. It aims to
-  provide searchable data on comic books with a public REST API.">{% endblock %}
+{% block sitedesc %}
+<meta name="description"
+  content="Metron is a comic book database. It aims to provide searchable data on comic books with a public REST API.">
+{% endblock %}
 {% block sitekeywords %}
 <meta name="keywords" content="Comics,Comic Book Database,API,REST">
 {% endblock %}
 {% block title %}Metron{% endblock %}
 
 {% block content %}
-<!-- information section -->
-<section>
-  <div class="container">
-    <div class="columns">
-      <!-- welcome column  -->
-      <div class="column">
-        <!-- info box -->
-        <div class="box">
-          <h1 class="title is-5">What?</h1>
-          <div class="content">
-            <p><strong>Metron</strong> is a community-based site whose goal is to build an open database with a
-            <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> API for
-            comics.</p>
-          </div>
-          <h1 class="title is-5">Why?</h1>
-          <div class="content">
-            <p>Currently the only comic book database the provides a REST API for users is
-            <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned service, 
-            the community that uses it has no control over the amount of resources provided to maintain it or ensure it's 
-            continued accessibility.</p>
-          </div>
-          <h1 class="title is-5">Want to join?</h1>
-          <div class="content">
-            <p>Sign-up for an account and read the <a href="{% url 'flatpage:editing-guidelines' %}">Editing 
-              Guidelines</a> before adding information to the database.</p>
-          </div>
-          <h1 class="title is-5">Want to use Metron's API?</h1>
-          <div class="content">
-            <p>If you want to use the data from Metron, there is a <a href="https://www.python.org/">Python</a> wrapper called 
-              <a href="https://github.com/Metron-Project/mokkari">Mokkari</a> to make it easy to use the API.</p>
-          </div>
-          <h1 class="title is-5">Need to tag your comic archives?</h1>
-          <div class="content">
-            <p>If you wish to tag your comic archives with metadata from Metron, head over Github
-            and install <a href="https://github.com/Metron-Project/metron-tagger">Metron-Tagger</a>.</p>
-          </div>
-          <h1 class="title is-5">Questions?</h1>
-          <div class="content">
-            <p>Have questions not covered here or suggestions? If so, feel free to contact us at either of these places:</p>
-            <ul>
-              <li><a href="https://matrix.to/#/#metrondb:matrix.org">Matrix Chat</a></li>
-              <li><a href="https://github.com/bpepple/metron/discussions">GitHub Discussions</a></li>
-            </ul>
-          </div>
-        </div>
-        <!-- end info box -->
+<header class="block has-text-centered">
+  <h1 class="title">Metron</h1>
+  <h2 class="subtitle">Comic Book Database</h2>
+</header>
 
-        <!-- recently edited issues -->
-        <div class="box">
-          <h1 class="title is-5">Recently Edited Issues</h1>
-          <!-- issue columns -->
-          <div class="columns is-multiline">
-            {% for issue in recently_edited %}
-            <div class="column is-one-quarter">
-              <!-- issue card-->
-              <div class="card">
-                <!-- card header -->
-                <header class="card-header">
-                {% with issue.created_on|is_new as is_new %}
-                  <p class="card-header-title is is-centered">{{ issue }}{% if is_new %}&nbsp;<span class="tag is-primary is-rounded">New!</span>{% endif %}</p>
-                {% endwith %}
-                </header>
-                <!-- end card header -->
-                <!-- card image -->
-                <div class="card-image">
-                  <figure class="image is-2by3">
-                    {% if issue.image %}
-                    {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
-                    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{
-                      issue }}">
-                    {% endthumbnail %}
-                    {% else %}
-                    <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{
-                      issue }}">
-                    {% endif %}
-                  </figure>
-                </div>
-                <!-- end card image -->
-                <!-- card footer -->
-                <footer class="card-footer">
-                  <p class="card-footer-item">{{ issue.cover_date|date:"M Y" }}</p>
-                  <a href="{% url 'issue:detail' issue.slug %}" class="card-footer-item">Info</a>
-                </footer>
-                <!-- end card footer -->
-              </div>
-              <!-- end issue card -->
-            </div>
-            {% endfor %}
-          </div>
-          <!-- end issue columns -->
-        </div>
-        <!-- end recently edited issues -->
+<!-- info -->
+<section class="tile is-ancestor">
+  <div class="tile is-parent">
+    <article class="tile is-child box">
+      <div class="content">
+        <p class="title">What is Metron?</p>
+        <p class="content">
+          <strong>Metron</strong> is a community-based site whose goal is to build an open database with a
+          <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> API for comics.
+        </p>
+        <p class="title">Why was Metron started?</p>
+        <p class="content">Currently the only comic book database the provides a REST API for users is
+          <a href="https://comicvine.gamespot.com/">Comic Vine</a>. Unfortunately, since it's a corporately-owned service, 
+          the community that uses it has no control over the amount of resources provided to maintain it or ensure it's 
+          continued accessibility.
+        </p>
+        <p class="title">Want to join?</p>
+        <p class="content">
+          Sign-up for an account and read the <a href="{% url 'flatpage:editing-guidelines' %}">Editing 
+          Guidelines</a> before adding information to the database.
+        </p>
+        <p class="title">Want to use Metron's API?</p>
+        <p class="content">
+          If you want to use the data from Metron, there is a <a href="https://www.python.org/">Python</a> wrapper called 
+          <a href="https://github.com/Metron-Project/mokkari">Mokkari</a> to make it easy to use the API.
+        </p>
+        <p class="title">Need to tag your comic archives?</p>
+        <p class="content">
+          If you wish to tag your comic archives with metadata from Metron, head over Github
+          and install <a href="https://github.com/Metron-Project/metron-tagger">Metron-Tagger</a>.
+        </p>
+        <p class="title">Questions?</p>
+        <p class="content">Have questions not covered here or suggestions? If so, feel free to contact us at either of these places:</p>
+        <ul>
+          <li><a href="https://matrix.to/#/#metrondb:matrix.org">Matrix Chat</a></li>
+          <li><a href="https://github.com/bpepple/metron/discussions">GitHub Discussions</a></li>
+        </ul>
       </div>
-      <!-- end welcome column-->
-
-      <!-- stats column -->
-      <div class="column is-one-fifth">
-        <div class="box">
-          <h1 class="title is-5">Database Statistics</h1>
-          <ul>
-            <li>Publisher{{ publisher|pluralize }}: {{ publisher|intcomma }}</li>
-            <li>Series: {{ series|intcomma }}</li>
-            <li>Issue{{ issue|pluralize }}: {{ issue|intcomma }}</li>
-            <li>Creator{{ creator|pluralize }}: {{ creator|intcomma }}</li>
-            <li>Character{{ character|pluralize }}: {{ character|intcomma }}</li>
-            <li>Team{{ team|pluralize }}: {{ team|intcomma }}</li>
-            <li>Story Arc{{ arc|pluralize }}: {{ arc|intcomma }}</li>
-          </ul>
-        </div>
-      </div>
-      <!-- end stats column -->
-    </div>
+    </article>
   </div>
 </section>
-<!-- end information section -->
+<!-- end info-->
+<!-- recently edited issues -->
+<section class="box">
+  <column>
+    <!-- issue columns -->
+    <div class="columns is-multiline">
+      {% for issue in recently_edited %}
+      <div class="column is-one-quarter">
+        <!-- issue card-->
+        <div class="card">
+          <!-- card header -->
+          <header class="card-header">
+            {% with issue.created_on|is_new as is_new %}
+            <p class="card-header-title is is-centered">
+              {{ issue }}{% if is_new %}&nbsp;<span class="tag is-primary is-rounded">New!</span>{% endif %}
+            </p>
+            {% endwith %}
+          </header>
+          <!-- end card header -->
+          <!-- card image -->
+          <div class="card-image">
+            <figure class="image is-2by3">
+              {% if issue.image %}
+              {% thumbnail issue.image "320x480" crop="center" format="WEBP" as im %}
+              <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ issue }}">
+              {% endthumbnail %}
+              {% else %}
+              <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ issue }}">
+              {% endif %}
+            </figure>
+          </div>
+          <!-- end card image -->
+          <!-- card footer -->
+          <footer class="card-footer">
+            <p class="card-footer-item">{{ issue.cover_date|date:"M Y" }}</p>
+            <a href="{% url 'issue:detail' issue.slug %}" class="card-footer-item">Info</a>
+          </footer>
+          <!-- end card footer -->
+        </div>
+        <!-- end issue card -->
+      </div>
+      {% endfor %}
+    </div>
+    <!-- end issue columns -->
+  </column>
+</section>
+<!-- end recent issues -->
 {% endblock %}
