--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,11 @@
   <body class="has-navbar-fixed-top">
     {% include "navbar.html" %}
 
-    {% block content %}{% endblock %}
+    <main class="section is-flex-grow-1">
+      <div class="container">
+      {% block content %}{% endblock %}
+      </div>
+    </main>
 
     {% if is_paginated %}
     <section class="section">
