--- a/comicsdb/templates/comicsdb/publisher_list.html
+++ b/comicsdb/templates/comicsdb/publisher_list.html
@@ -6,112 +6,103 @@
 
 {% block content %}
   {% if publisher_list %}
-  <!-- hero -->
-  <section class="hero">
-    <div class="hero-body">
-      <div class="container has-text-centered">
-        <h1 class="title is-3">Publisher{{ publisher_list.count|pluralize }} List</h1>
-      </div>
-    </div>
-  </section>
-  <!-- end hero -->
-
+  <!-- header -->
+  <header class="block has-text-centered">
+    <h1 class="title">Publisher{{ publisher_list.count|pluralize }} List</h1>
+  </header>
+  <!-- end header -->
   <!-- publisher list -->
   <section>
-    <div class="container">
-      <!-- navigation -->
-      <nav class="level">
-        <!-- search box -->
-        <div class="level-left">
-          <div class="level-item">
-            <p class="subtitle is-5">
-              <strong>{{ page_obj.paginator.count }}</strong> Publisher{{ page_obj.paginator.count|pluralize }}
-            </p>
-          </div>
-          <div class="level-item">
-            <form action="{% url 'publisher:search' %}" method="get" accept-charset="utf-8">
-              <div class="field has-addons">
-                <p class="control">
-                  <input class="input" name="q" type="search" placeholder="Find a publisher">
-                </p>
-                <p class="control">
-                  <button class="button">Search</button>
-                </p>
-              </div>
-            </form>
-          </div>
-        </div>
-        <!-- end search box -->
-        <!-- add button -->
-        <div class="level-right">
-          <p class="level-item">
-            {% if user.is_authenticated %}
-            <a class="button is-primary" href="{% url 'publisher:create' %}" title="Add a new publisher">
-              <span class="icon is-small">
-                <i class="fas fa-plus"></i>
-              </span>
-              <span>New</span>
-            </a>
-            {% endif %}
+    <!-- navigation -->
+    <nav class="level">
+      <!-- search box -->
+      <div class="level-left">
+        <div class="level-item">
+          <p class="subtitle is-5">
+            <strong>{{ page_obj.paginator.count }}</strong> Publisher{{ page_obj.paginator.count|pluralize }}
           </p>
         </div>
-        <!-- end add button-->
-      </nav>
-      <!-- end navigation -->
-
-      <!-- publisher columns -->
-      <div class="columns is-multiline">
-        {% for publisher in publisher_list %}
-        <div class="column is-one-quarter has-text-centered">
-          <!-- series card -->
-          <div class="card">
-            <!-- card header -->
-            <header class="card-header">
-              <p class="card-header-title is-centered">{{ publisher }}</p>
-            </header>
-            <!-- end card header -->
-            <!-- card image -->
-            <div class="card-image">
-              <figure class="image is-2by3">
-                {% if publisher.image %}
-                  {% thumbnail publisher.image "320x480" crop="center" format="WEBP" as im %}
-                    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ publisher.name }}">
-                  {% endthumbnail %}
-                {% else %}
-                  <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ publisher.name }}">
-                {% endif %}
-              </figure>
+        <div class="level-item">
+          <form action="{% url 'publisher:search' %}" method="get" accept-charset="utf-8">
+            <div class="field has-addons">
+              <p class="control">
+                <input class="input" name="q" type="search" placeholder="Find a publisher">
+              </p>
+              <p class="control">
+                <button class="button">Search</button>
+              </p>
             </div>
-            <!-- end card image -->
-            <!-- card footer -->
-            <footer class="card-footer">
-              {% with count=publisher.series_count %}
-                {% if count %}
-                  <a href="{% url 'publisher:series' publisher.slug %}" class="card-footer-item">
-                    {{ count }} Series
-                  </a>
-                {% else %}
-                  <p class="card-footer-item">0 Series</p>
-                {% endif %}
-              {% endwith %}
-               <a href="{% url 'publisher:detail' publisher.slug %}" class="card-footer-item">Info</a>
-            </footer>
-            <!-- end card footer -->
-          </div>
-          <!-- end series card -->
+          </form>
         </div>
-        {% endfor %}
       </div>
-      <!-- end publisher columns -->
+      <!-- end search box -->
+      <!-- add button -->
+      <div class="level-right">
+        <p class="level-item">
+          {% if user.is_authenticated %}
+          <a class="button is-primary" href="{% url 'publisher:create' %}" title="Add a new publisher">
+            <span class="icon is-small">
+              <i class="fas fa-plus"></i>
+            </span>
+            <span>New</span>
+          </a>
+          {% endif %}
+        </p>
+      </div>
+      <!-- end add button-->
+    </nav>
+    <!-- end navigation -->
+
+    <!-- publisher columns -->
+    <div class="columns is-multiline">
+      {% for publisher in publisher_list %}
+      <div class="column is-one-quarter has-text-centered">
+        <!-- series card -->
+        <div class="card">
+          <!-- card header -->
+          <header class="card-header">
+            <p class="card-header-title is-centered">{{ publisher }}</p>
+          </header>
+          <!-- end card header -->
+          <!-- card image -->
+          <div class="card-image">
+            <figure class="image is-2by3">
+              {% if publisher.image %}
+                {% thumbnail publisher.image "320x480" crop="center" format="WEBP" as im %}
+                  <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{ publisher.name }}">
+                {% endthumbnail %}
+              {% else %}
+                <img src="{% static 'site/img/image-not-found.webp' %}" alt="No image for {{ publisher.name }}">
+              {% endif %}
+            </figure>
+          </div>
+          <!-- end card image -->
+          <!-- card footer -->
+          <footer class="card-footer">
+            {% with count=publisher.series_count %}
+              {% if count %}
+                <a href="{% url 'publisher:series' publisher.slug %}" class="card-footer-item">
+                  {{ count }} Series
+                </a>
+              {% else %}
+                <p class="card-footer-item">0 Series</p>
+              {% endif %}
+            {% endwith %}
+              <a href="{% url 'publisher:detail' publisher.slug %}" class="card-footer-item">Info</a>
+          </footer>
+          <!-- end card footer -->
+        </div>
+        <!-- end series card -->
+      </div>
+      {% endfor %}
     </div>
+    <!-- end publisher columns -->
   </section>
   <!-- end publisher list -->
   {% else %}
   <section>
-    <div class="container">
-      <p>No Publishers currently available. Do you want to create one?</p>
-      <a class="button is-primary" href="{% url 'publisher:create' %}" title="Add a new publisher">New</a>
-    </div>
+    <p>No Publishers currently available. Do you want to create one?</p>
+    <a class="button is-primary" href="{% url 'publisher:create' %}" title="Add a new publisher">New</a>
   </section>
   {% endif %}
 {% endblock %}
