--- a/comicsdb/templates/comicsdb/issue_detail.html
+++ b/comicsdb/templates/comicsdb/issue_detail.html
@@ -1,12 +1,14 @@
-{% extends "comicsdb/comics_base.html" %}
+{% extends parent_template|default:"base.html" %}
 {% load thumbnail %}
 {% load static %}
 
 {% block sitedesc %}<meta name="description" content="{{ issue }} Information">{% endblock %}
-{% block sitekeywords %}<meta name="keywords" content="{{ issue.series.publisher }}, {{ issue.series.name }}, {{ issue.cover_date|date:'F Y' }}{% with characters=issue.characters.all %}{% if characters %}{% for character in characters %}, {{ character.name }}{% endfor %}{% endif %}{% endwith %}">{% endblock %}
+{% block sitekeywords %}
+<meta name="keywords" content="{{ issue.series.publisher }}, {{ issue.series.name }}, {{ issue.cover_date|date:'F Y' }}{% with characters=issue.characters.all %}{% if characters %}{% for character in characters %}, {{ character.name }}{% endfor %}{% endif %}{% endwith %}">
+{% endblock %}
 {% block title %}{{ issue }}{% endblock title %}
 
-{% block comic_content %}
+{% block content %}
   <!-- issue cover modal -->
   <div id="modal-bis" class="modal">
     <div class="modal-background"></div>
