Use base template for issue_form template

--- a/comicsdb/templates/comicsdb/issue_form.html
+++ b/comicsdb/templates/comicsdb/issue_form.html
@@ -1,4 +1,4 @@
-{% extends "comicsdb/comics_base.html" %}
+{% extends parent_template|default:"base.html" %}
 {% load static %}
 {% load bulma_tags %}
 
@@ -6,8 +6,10 @@
 
 {% block headcss %}{{ form.media.css }}{% endblock %}
 
-{% block comic_content %}
-  <h1 class="title">Issue Form</h1>
+{% block content %}
+  <header class="block has-text-centered">
+    <h1 class="title">Issue Form</h1>
+  </header>
   <form method="post" enctype="multipart/form-data" id="issueForm">
     {%csrf_token%}
     <!-- main -->
@@ -48,7 +50,6 @@
       {% endfor %}
     </div>
     <!-- end main -->
-
     <!-- credits -->
     <div class="box">
       <h2 class="title is-5">Credits</h2>
